created the page

--- a/training.html
+++ b/training.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <div id="container">
-        <div style="background-color: rgb(255, 253, 245);">
+        <div style="background-color: #f6f0f3;">
             <div>
                 <header class="header">
                    <div style="width: 92%; margin: auto;">
                     <div class="nav">
                         <div style="display: flex; margin:auto;max-width:1440px; height:40px; justify-content:space-between; align-items:center">
                             <a href="#">
-                                <img src="./imgfortraining/logo (1).svg" alt="" class="logoo">
+                                <img src="./imagesforhome/imgfortraining.svg" alt="" class="imgfortraining">
                             </a>
                             <div class="nav-content">
                                 <a href="#" class="nav-links">About</a>
+                                <a href="#" class="nav-links">Why Us?</a>
+                                <a href="#" class="nav-links">Stacks Covered</a>
+                                <a href="#" class="nav-links">FAQs</a>
                             </div>
                         </div>
                     </div>
