changed a class name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>Learn, Build, Grow.</h2>
             <p> Unlock your Brilliance with our hands-on <a href="#">beginner</a> and <a href="#">expert training</a>.Zuri team has been immensely succesful in creating a global network of a highly adept intelligent workforce that can help your company achieve their mission-critical <a href="#">projects and goals</a></p>
             <div class="btn">
-                <a href="./training.html"> <button class="red-filled">I'm new to the industry</button></a>
+                <a href="./new_to_industry.html"> <button class="red-filled">I'm new to the industry</button></a>
 
                 <br class="break">
 
