change a class name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="hero_btn_container">
-                <a href="new_to_industry.html">
+                <a href="training.html">
                     <button class="new_to_indistry">I'm new to the industry</button>
                 </a>
                 <a href="talent.html">
