changed some class name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="hero_txt_wrapper">
                 <h1 class="hero_heading">Learn, Build, Grow.</h1>
                 <p class="hero_txt">
-                    Unlock your Brilliance with our hands-on <a href="new_to_industry.html"
+                    Unlock your Brilliance with our hands-on <a href="training.html"
                         class="hero_colored_txt">beginner</a>
                     and <a href="https://internship.zuri.team" class="hero_colored_txt">expert training</a>.
                     Zuri Team has been immensely successful in creating a global network of
